[gd_scene load_steps=4 format=3 uid="uid://b51767lw6vpl8"]

[ext_resource type="Script" uid="uid://b4c22ym5ynwar" path="res://level_31.gd" id="1_kiaka"]
[ext_resource type="Texture2D" uid="uid://d64d2xbas3tu" path="res://Assets/skiing stuff/silliest part of bday.png" id="2_uw0i2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2uya4"]
size = Vector2(770, 698)

[node name="level_31" type="Node2D"]
script = ExtResource("1_kiaka")

[node name="SilliestPartOfBday" type="Sprite2D" parent="."]
position = Vector2(575, 324.25)
scale = Vector2(1.62994, 1.39849)
texture = ExtResource("2_uw0i2")

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 152.0
offset_right = 297.0
offset_bottom = 201.0
scale = Vector2(1.31092, 1.46429)
text = "The highlight of the day? perhaps no
The silliest part? perhaps maybe
click the left to mover er on"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(975, 339)
shape = SubResource("RectangleShape2D_2uya4")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-912, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1103, 339)
shape = SubResource("RectangleShape2D_2uya4")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 80.0
offset_top = 512.0
offset_right = 220.0
offset_bottom = 535.0
scale = Vector2(1.80207, 3.40038)
text = "Whoops other left"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Area2D2" to="." method="_on_area_2d_2_input_event"]
